classDiagram
direction LR

User <|-- Admin
Admin --> Post
Post --> DisplayBoard
User --> DisplayBoard

class User {
  +id: String
  +name: String
  +email: String
  +role: String
  +login()
  +logout()
}

class Admin {
  +createPost()
  +editPost()
  +deletePost()
  +manageUsers()
}

class Post {
  +id: String
  +title: String
  +content: String
  +imageUrl: String
  +datePosted: Date
  +isVisible: Boolean
  +create()
  +update()
  +archive()
}

class DisplayBoard {
  +posts: List<Post>
  +showPosts()
  +filterByDate()
  +filterByCategory()
}